[package]
name = "zling-server"
version = "0.1.0"
edition = "2021"


[dependencies]
# async rt
futures = "0.3.28"
actix-rt = "2.8.0"
# http
actix-web = "4.3.1"
# ws
actix-ws = "0.2.5"
anyhow = "1.0.70"
derive_more = "0.99.17"
# voice
mediasoup = "0.11.4"
# logging
env_logger = "0.10.0"
log = "0.4.17"
# config
lazy_static = "1.4.0"
# random
nanoid = "0.4.0"
rand = "0.8.5"
# json
serde = "1.0.160"
serde_json = { version = "1.0.95", features = ["raw_value"] }
chrono = { version = "0.4.24", features = ["serde"] }
uuid = "1.3.1"
# postgres db
sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls", "postgres", "macros", "json", "chrono", "offline" ] }
# password hashing
rust-argon2 = "1.0.0"
regex = "1.8.1"
sha2 = "0.10.6"
hmac = "0.12.1"
hex = "0.4.3"
base64-url = "2.0.0"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
tokio = { version = "1.28.1", features = ["fs"] }
mime = "0.3.17"
